2000-12-26  Derek Price  <derek.price@openavenue.com>

	* Makefile.in: update timestamp
	* CVSvn.texi: ditto

2000-12-26  Derek Price  <derek.price@openavenue.com>

	* Makefile.am: new target for creation of CVSvn.texi
	(EXTRA_DIST): add CVSvn.texi.in & CVSvn.texi
	* Makefile.in: Regenerated
	* CVSvn.texi: new file
	* .cvsignore: remove CVSvn.texi since it is now included in dist

2000-12-22  Derek Price  <derek.price@openavenue.com>

	* Makefile.in: Regenerated

2000-12-21  Derek Price  <derek.price@openavenue.com>

	* cvs-paper.ps: Backout accidental regeneration.

2000-12-21  Derek Price  <derek.price@openavenue.com>

	* .cvsignore: Added *.pdf versions of the *.ps docs
	* CVSvn.texi.in: Use configure to generate CVSvn.texi
	* Makefile.am: New file needed by Automake
	* Makefile.in: Regenerated
	* cvs-paper.ps: Regenerated
	* texinfo.tex: New file added to placate Automake.  Apparently, its
	inclusion is mandated by the GNU coding standards.

2000-12-14  Derek Price  <derek.price@openavenue.com>
	    Linus Tolke  <linus@epact.se>

	* cvs.texinfo (Merging a branch): changed some references to "BRANCH"
	to "BRANCHNAME" for consistancy.  Add a warning about merging using a
	single tagname reference with an xref to "Merging adds and removals"
	for the long explanation
	(Merging adds and removals): Add the long explanation of why merging
	from a single tagname can be tricky
	(update): Add a warning about merging using a single tagname reference
	with an xref to "Merging adds and removals" for the long explanation
	
2000-11-13  Derek Price  <derek.price@openavenue.com>

	* cvs.texinfo: use '@sc{cvs}' instead of 'CVS' in various locations

2000-11-08  Derek Price  <derek.price@openavenue.com>

	* cvs.texinfo (settitle): stick a 'v' in front of the version number
	to make it harder to confuse with chapter, section, and page numbers.

2000-11-08  Derek Price  <derek.price@openavenue.com>

	* cvs.texinfo (settitle): add the version number to the title string